[package]
name = "zkmq"
version = "0.1.0"
authors = ["Colum <colum.mcgaley@fastmail.com>"]
edition = "2018"

[lib]
name = "zkmq"
path = "src/lib.rs"

[[bin]]
name = "zkmq_housekeeper"
path = "bin/housekeeper.rs"

[dependencies]
zookeeper = "0.5"
uuid = { version = "0.8", features = ["v4"]}
log = "0.4"
anyhow = "1.0"
lru = "0.6"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
env_logger = "0.8"