[package]
name = "zkmq"
description = "A Zookeeper based Message Queue"
version = "0.2.1"
authors = ["Colum McGaley <rust-lang@m1.volf.co>"]
edition = "2018"
license = "Apache-2.0"
keywords = ["zookeeper", "message-queue"]
categories = ["concurrency"]
homepage = "https://rust.volf.co/zkmq"
repository = "https://github.com/volfco/zkmq"
readme = "README.md"


[lib]
name = "zkmq"
path = "src/lib.rs"

[[bin]]
name = "zkmq_housekeeper"
path = "bin/housekeeper.rs"

[dependencies]
zookeeper = "0.5"
uuid = { version = "0.8", features = ["v4"]}
log = "0.4"
anyhow = "1.0"
lru = "0.6"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
env_logger = "0.8"